@@ -177,3 +177,4 @@ Chris Poblete, Dell
 -------------------
 11/08/2010 [ 3101155 ] Failed to load provider libraries due to symbol conflicts
 11/08/2010 [ 3101148 ] SfcbLocal method parameter type conversion and validation
+11/10/2010 [ 3101154 ] Daemon clients failed SfcbLocal connect due to permission
