@@ -32,7 +32,7 @@
 #include <unistd.h>
 #include <stddef.h>
 #include "control.h"
-
+#include <grp.h>
 
 extern unsigned long exFlags;
 
@@ -681,6 +681,7 @@ void localConnectServer()
    int nsocket,ssocket;
    unsigned int cl, notDone=1;
    char *path;
+   char *gperm = NULL;
    
    struct _msg {
       unsigned int size;
@@ -710,6 +711,29 @@ void localConnectServer()
    if (bind(ssocket,(const struct sockaddr*)serverAddr, serverAddrLen)<0) {
       perror("bind error");
       return;
+   }
+
+   getControlChars("socketPathGroupPerm", &gperm);
+   if (NULL != gperm) {
+      struct group *objgperm;
+      if (NULL == (objgperm = getgrnam(gperm))) {
+         mlogf(M_INFO,M_SHOW,"--- localConnectServer getgrnam failed: %s\n", strerror(errno));
+      } else {
+         // change the socket group ownership as requested
+         if (chown(path, getuid(), objgperm->gr_gid)) {
+            mlogf(M_INFO,M_SHOW,"--- localConnectServer chown failed: %s\n", strerror(errno));
+         } else {
+            struct stat sobj;
+            // change the socket permission to allow group as requested
+            if (stat(path, &sobj)) {
+               mlogf(M_INFO,M_SHOW,"--- localConnectServer stat failed: %s\n", strerror(errno));
+            } else {
+               if (chmod(path, (sobj.st_mode | S_IWGRP))) {
+                  mlogf(M_INFO,M_SHOW,"--- localConnectServer chmod failed: %s\n", strerror(errno));
+               }
+            }
+         }
+      }
    }
    
    listen(ssocket,1);
