@@ -7,6 +7,7 @@ Bugs fixed:
 - 3095884 Indication classes missing SystemName
 - 3101155 Failed to load provider libraries due to symbol conflicts
 - 3101148 SfcbLocal method parameter type conversion and validation
+- 3101154 Daemon clients failed SfcbLocal connect due to permission
 
 Changes in 1.3.9
 ================
